# pre-commit-sphinx

./: README.md  setup.cfg
pre_commit_sphinx/: build_docs.py
