[metadata]
name = pre_commit_sphinx
version = v0.0.5
description = Pre-commit hooks to check that sphinx docs build correctly
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/duz-sg/pre-commit-sphinx
author = Du, Zheng
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    Sphinx==6.2.1
    sphinx-press-theme>=0.8.0
    sphinx-tabs>=3.4.1
    commonmark>=0.9.1
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    build-docs = pre_commit_sphinx.build_docs:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
